Implementing users, sessions, authorization and error treatmeant
