# src/modules/accounts/entities/User.ts
@@ -1,16 +1,25 @@
 import { v4 as uuid } from "uuid";
 import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm";
 
-@Entity("specifications")
-class Specification {
+@Entity("users")
+class User {
   @PrimaryColumn()
-  id?: string;
+  id: string;
 
   @Column()
   name: string;
 
   @Column()
-  description: string;
+  email: string;
+
+  @Column()
+  password: string;
+
+  @Column()
+  driver_license: string;
+
+  @Column()
+  isAdmin: boolean;
 
   @CreateDateColumn()
   createdAt: Date;
@@ -22,4 +31,4 @@ class Specification {
   }
 }
 
-export { Specification };
+export { User };
